# PrismaUI

./: .env  .gitignore  CONTRIBUTING.md  Cargo.toml  web.bat
.claude/: settings.local.json
crates/browser/: Cargo.toml
crates/browser/src/: browser_window.rs  main.rs  tab_manager.rs
crates/hello_world/: Cargo.toml
crates/hello_world/src/: assets.rs  renderer.rs  themes.rs
crates/hello_world/src/compiler/: mod.rs
crates/hello_world/src/engine/: mod.rs
crates/hello_world/src/ui/: app.rs  menu.rs  mod.rs  rainbow_engine_final.rs  shared.rs
crates/hello_world/src/ui/editors/: mod.rs
crates/hello_world/src/ui/panels/: animation_editor.rs  blueprint_editor.rs  level_editor.rs  material_editor.rs  mod.rs  ui_editor.rs
crates/hello_world/src/ui/panels/blueprint_editor2/: mod.rs  node_graph.rs  node_library.rs  panel.rs  properties.rs  toolbar.rs
crates/hello_world/src/ui/panels/script_editor/: file_explorer.rs  mod.rs  terminal.rs  text_editor.rs
crates/prisma_compositor/: Cargo.toml
crates/prisma_compositor/src/: assets.rs  core.rs  lib.rs  main.rs  memory.rs  renderer.rs  simple_renderer.rs  threading.rs  ui.rs  window.rs
crates/prisma_compositor/src/shaders/: image.wgsl  quad.wgsl  text.wgsl
crates/prisma_ui/: Cargo.toml  README.md
crates/prisma_ui/assets/: README.md
crates/prisma_ui/src/: animations.rs  assets.rs  desktop.rs  lib.rs  main.rs  shell.rs  window_manager.rs
crates/prisma_ui/src/components/: app_menu.rs  app_menu.rs.backup  browser.rs  command_palette.rs  file_explorer.rs  mod.rs  settings.rs  taskbar.rs  wallpaper.rs
crates/ui/: Cargo.toml
crates/ui/src/: icon.rs  lib.rs  styled.rs  viewport_final.rs
crates/ui/src/input/: element.rs  state.rs  text_input.rs
crates/ui/src/theme/: mod.rs
examples/: json_ui_demo.rs  simple_render_engine.rs  viewport_example.rs
examples/json_ui/: README.md  app.json  card.json  header.json
