[package]
name = "browser"
version = "0.1.0"
edition = "2024"
authors = ["Claude Code"]
license = "Apache-2.0"

[[bin]]
name = "browser"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui-component.workspace = true
gpui-webview = { path = "../webview" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3"
urlencoding = "2.1"