[package]
name = "prisma_compositor"
version = "0.1.0"
edition = "2021"
description = "High-performance WGPU compositor for PrismaUI desktop environment"

[[bin]]
name = "prisma_compositor"
path = "src/main.rs"

[dependencies]
# Core WGPU and windowing
winit = "0.29"
wgpu = { version = "0.19", features = ["spirv"] }
pollster = "0.3"

# Image processing and assets
image = { version = "0.25", features = ["png", "jpeg", "webp"] }
bytemuck = { version = "1.15", features = ["derive"] }

# Async runtime and threading
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
rayon = "1.8"
num_cpus = "1.16"

# Serialization and data
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Math and utilities
cgmath = "0.18"
ultraviolet = "0.9"
hashbrown = "0.14"

# Font rendering
fontdb = "0.16"
ttf-parser = "0.20"

# Logging and profiling
log = "0.4"
env_logger = "0.10"
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Memory management
mimalloc = { version = "0.1", default-features = false }

# Performance profiling
puffin = "0.18"

[profile.release]
# Maximum optimization for performance
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# Enable debug info for profiling in release builds
debug = true

[profile.dev]
# Faster debug builds
opt-level = 1
